# supportgenie

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  test_api.py
.github/workflows/: ci.yml
data/processed/: eval_set.jsonl  knowledge_base.jsonl
migrations/: env.py
migrations/versions/: 555494e69c8f_create_initial_tables.py
scripts/: evaluate.py  ingest.py  mcp_server.py  prepare_data.py  try_agent.py
src/supportgenie/: __init__.py  api.py  cached_answer.py  config.py  embeddings.py  generator.py  metrics.py  observability.py  retriever.py  schemas.py  vector_store.py
src/supportgenie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/supportgenie/auth/: __init__.py  dependencies.py  passwords.py  routes.py  tokens.py  users.py
src/supportgenie/cache/: __init__.py  exact.py  semantic.py
src/supportgenie/db/: __init__.py  database.py  models.py  users_repo.py
src/supportgenie/evaluation/: __init__.py  build_records.py  run_eval.py
src/supportgenie/graph/: __init__.py  agent.py  nodes.py  state.py  workflow.py
src/supportgenie/guardrails/: __init__.py  groundedness.py  injection.py  pii.py  policy.py
src/supportgenie/static/: index.html
tests/: test_basics.py  test_cached_answer.py
