[project]
name = "supportgenie"
version = "0.1.0"
description = "Agentic RAG customer-support copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "pandas",
    "sentence-transformers",
    "qdrant-client",
    "groq>=1.5.0",
    "python-dotenv>=1.2.2",
    "langgraph>=1.2.6",
    "mcp>=1.28.0",
    "langchain-mcp-adapters>=0.3.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/supportgenie"]
