[project]
name = "supportgenie"
version = "0.1.0"
description = "Agentic RAG customer-support copilot"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets",
    "pandas",
    "sentence-transformers",
    "qdrant-client",
    "python-dotenv>=1.2.2",
    "langgraph>=1.2.6",
    "mcp>=1.28.0",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-groq>=1.1.3",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "pydantic-settings>=2.14.2",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.4",
    "langfuse>=4.9.1",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=8.0.1",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/supportgenie"]
